--- a/index.html
+++ b/index.html
@@ -4,8 +4,126 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
-    twibbon
+
+ <div class="container-fluid mt-3">
+        <div class="jumbotron">
+            <div class="container">
+                <div class="row">
+                  <div class="col-sm">
+                    <div class="card">
+                        <img id="img1" class="card-img-top" alt="your image">
+                        <div class="card-body">
+                          <h5 class="card-title">Pilih gambar kamu</h5>
+                          <form>
+                            <input type="file" accept="image/*" onchange="loadFile(event)">
+                          </form>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="col-sm">
+                    <div class="card" style="width: auto;">
+                        <img id="gambartemplate" src="#" class="card-img-top" alt="your tempate">
+                        <!-- <canvas id="canvas"></canvas> -->
+                        <div class="card-body">
+                          <h5 class="card-title">Pilih template kamu</h5>
+                          <form><input type='file' accept="image/*" onchange="loadTemplate(event)"></form>
+                          <!-- <button id="btndownload" class="btn btn-primary btn-block">Download</button> -->
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <hr>
+                <button class="btn btn-success btn-block" onclick="gen()">Generate</button>
+                <hr>
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="card">
+                            <div class="card-header">
+                              Result
+                            </div>
+                            <!-- <img src="..." class="card-img-top" alt="..."> -->
+                            <canvas class="card-img-top" id="canvas"></canvas>
+                            <div class="card-body">
+                              <h5 class="card-title">Click the button below to download your image </h5>
+                              <button id="btndownload" class="btn btn-primary btn-block">Download</button>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+    </div>
+<script>
+  var loadFile = function(event) {
+    var output = document.getElementById('img1');
+    output.src = URL.createObjectURL(event.target.files[0]);
+    output.onload = function() {
+    URL.revokeObjectURL(output.src)
+    }
+  };
+
+  var loadTemplate = function(event) {
+    var output = document.getElementById('gambartemplate');
+    output.src = URL.createObjectURL(event.target.files[0]);
+    output.onload = function() {
+    URL.revokeObjectURL(output.src)
+    }
+  };
+
+  function gen() {
+      alert("clicked");
+      // Mensetting Variabel
+        var img1 = document.getElementById('img1');
+        console.log(img1);
+        var img2 = document.getElementById('gambartemplate');
+        console.log(img2);
+        var canvas = document.getElementById("canvas");
+        var context = canvas.getContext("2d");
+        var width = img2.width;
+        var height = img2.height;
+        canvas.width = width;
+        canvas.height = height;
+        // Fungsi untuk men-draw gambar
+        context.drawImage(img1, 0, 1, width, height);
+        var image1 = context.getImageData(0, 0, width, height);
+        var imageData1 = image1.data;
+        context.drawImage(img2, 0, 0, width, height);
+        var image2 = context.getImageData(0, 0, width, height);
+        var imageData2 = image2.data;
+  }
+
+  function download(canvas, filename) {
+    /// create an "off-screen" anchor tag
+    var lnk = document.createElement('a'), e;
+
+    /// the key here is to set the download attribute of the a tag
+    lnk.download = filename;
+
+    /// convert canvas content to data-uri for link. When download
+    /// attribute is set the content pointed to by link will be
+    /// pushed as "download" in HTML5 capable browsers
+    lnk.href = canvas.toDataURL("image/png;base64");
+
+    /// create a "fake" click-event to trigger the download
+        if (document.createEvent) {
+            e = document.createEvent("MouseEvents");
+            e.initMouseEvent("click", true, true, window,
+                            0, 0, 0, 0, 0, false, false, false,
+                            false, 0, null);
+
+            lnk.dispatchEvent(e);
+        } else if (lnk.fireEvent) {
+            lnk.fireEvent("onclick");
+        }
+    }
+
+    var dwn = document.getElementById('btndownload');
+        dwn.onclick = function(){
+        download(canvas, 'image.png');
+    };
+</script>
 </body>
 </html>
