add class biar ga gepeng

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+      .hasil{
+        background-position: center center;
+        background-size: cover;
+      }
+    </style>
 </head>
 <body>
 
@@ -45,7 +51,7 @@
                               Result
                             </div>
                             <!-- <img src="..." class="card-img-top" alt="..."> -->
-                            <canvas class="card-img-top" id="canvas"></canvas>
+                            <canvas class="card-img-top hasil" id="canvas"></canvas>
                             <div class="card-body">
                               <h5 class="card-title">Click the button below to download your image </h5>
                               <button id="btndownload" class="btn btn-primary btn-block">Download</button>
